# ignis-term

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: browser-terminal-not-rendering.md
.planning/debug/resolved/: terminal-not-rendering.md  terminal-page-not-rendering.md
.planning/phases/01-connection-authentication/: 01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-terminal-iterm2/: 02-02-SUMMARY.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: SETUP.md
homebrew/Casks/: terminal-remote.rb
mac-client/: Cargo.toml  README.md  coprocess-bridge.sh  iterm-bridge.py
mac-client/src/: app.rs  iterm-bridge.ts  lib.rs  main.rs  protocol.rs  session-manager.ts
pty-proxy/: Cargo.toml
pty-proxy/src/: main.rs
relay-server/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  server.ts  session-registry.ts
relay-server-v2/src/: main.rs
relay-server/assets/: index.html
relay-server/shared/: protocol.ts
relay-server/src/: protocol.rs  state.rs
relay-server/web-ui/: package.json
scripts/: install.sh  setup.sh  uninstall.sh
shell-integration/: init.bash  init.fish  init.zsh
src/lib/: iterm-theme.ts
src/relay/: session-registry.ts
src/routes/: +layout.svelte  +page.svelte
ui/: package.json  pnpm-lock.yaml  vite.config.ts
(+40 files in other folders)
