[package]
name = "pty-proxy"
version = "0.1.0"
edition = "2021"
description = "Transparent PTY proxy for terminal session capture"

[[bin]]
name = "pty-proxy"
path = "src/main.rs"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["term", "signal", "poll", "fs", "uio", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
